--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8b4ObBDJaADTrfS3mXNAgko1RW7ed--w"
+      defer
+    ></script>
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="backdrop-hook"></div>
+    <div id="modal-hook"></div>
     <div id="drawer-hook"></div>
     <div id="root"></div>
     <!--
